--- a/client/src/index.css
+++ b/client/src/index.css
@@ -165,7 +165,8 @@ body {
     align-items: center;
     margin-right: 10px;
     margin-left: 18px;
-    margin-top: 18px;
+    margin-top: 9px;
+    margin-bottom: 9px;
     overflow: hidden;
 }
 
@@ -175,12 +176,28 @@ body {
     flex-wrap: nowrap;
 }
 
+.search-input-header {
+    display: flex;
+    flex-direction: column;
+}
+
+.search-input-header label {
+    display: block;
+    font-weight: bold;
+    padding-left: 6px;
+    font-size: small;
+}
+
 .k-input {
     margin-top: 1px;
     width: 40px;
     height: 24px;
     min-height: 24px;
     text-align: center;
+}
+
+.species-header {
+    margin-left: 12px;
 }
 
 .species-input-container {
@@ -283,11 +300,11 @@ a.inactivated {
 }
 
 .search-button {
-    margin-top: 1px;
+    margin-top: 16px;
     padding-left: 8px;
     padding-right: 8px;
-    margin-right: 16px;
-    height: 40px;
+    margin-right: 10px;
+    height: 41px;
     width: 80px;
     word-wrap: nowrap;
     background: #000;
