--- a/client/src/index.css
+++ b/client/src/index.css
@@ -555,6 +555,7 @@ select {
     border: 2px solid black;
     text-align: center;
     max-width: 500px;
+    margin-bottom: 5px;
 }
 
 .red-sidebar-link:hover {
@@ -572,6 +573,8 @@ select {
     border: 2px solid black;
     text-align: center;
     max-width: 500px;
+    margin-left: 8px;
+    margin-right: 10px;
 }
 
 .blue-sidebar-link:hover {
@@ -699,12 +702,15 @@ select {
     background-color: var(--light-background);
     color: #000;
     margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     text-align: left;
     outline: 1px solid black;
-    width: 100%;
+    width: 98%;
     vertical-align: middle;
     position: relative;
+    margin-left: 5px;
+    /* max-width: 525px; */
+    min-width: none;
 }
 
 .go-definition p {
@@ -715,12 +721,22 @@ select {
     padding-left: 10px;
     display: inline-flex;
     vertical-align: middle;
+    font-weight: bold;
 }
 
 .go-def-content {
-    padding-left: 16px;
-    padding-right: 16px;
-    margin-bottom: 0;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-right: 12px;
+    margin-left: 2px;
+    margin-bottom: 0px;
+    margin-top: 0px;
+    /* max-width: 405px; */
+}
+
+.go-def-text {
+    margin-top: 0px;
+    text-align: justify;
 }
 
 .icon-top-right {
