--- a/client/src/index.css
+++ b/client/src/index.css
@@ -535,19 +535,29 @@ select {
     margin: auto;
 }
 
+.query-result-link-container a:hover {
+    text-decoration: underline;
+}
+
 .sidebar-button-block {
     display: block;
 }
 
 /* CSS for NodeTab.jsx */
 .node-tab-text {
-    margin-bottom: none;
+    font-size: small;
+    margin-bottom: 10px;
 }
 
 .database-link {
     font-size: small;
 }
 
+.database-link a:hover {
+    text-decoration: underline;
+}
+
+/* Also renders links for Query Result */
 .red-sidebar-link {
     font-weight: 500;
     text-decoration: none;
@@ -1294,6 +1304,7 @@ select {
 .new-source-container {
     margin-top: 8px;
     margin-bottom: 8px;
+    width: 240px;
     max-width: 240px;
     align-self: center;
 }
@@ -1320,6 +1331,7 @@ select {
     border: 2px solid black;
     border-radius: 5px;
     text-align: center;
+    align-self: center;
 }
 
 .new-source:hover {
