--- a/client/src/index.css
+++ b/client/src/index.css
@@ -535,29 +535,6 @@ select {
     margin: auto;
 }
 
-.query-result-link-container a:hover {
-    text-decoration: underline;
-}
-
-.sidebar-button-block {
-    display: block;
-}
-
-/* CSS for NodeTab.jsx */
-.node-tab-text {
-    font-size: small;
-    margin-bottom: 10px;
-}
-
-.database-link {
-    font-size: small;
-}
-
-.database-link a:hover {
-    text-decoration: underline;
-}
-
-/* Also renders links for Query Result */
 .red-sidebar-link {
     font-weight: 500;
     text-decoration: none;
@@ -586,8 +563,7 @@ select {
     border: 2px solid black;
     text-align: center;
     max-width: 500px;
-    margin-left: 8px;
-    margin-right: 10px;
+    margin-bottom: 5px;
 }
 
 .blue-sidebar-link:hover {
@@ -595,7 +571,84 @@ select {
     background-color: var(--graph-blue-hover);
 }
 
-.tan-sidebar-link {
+.query-result-link-container a:hover {
+    text-decoration: underline;
+}
+
+.sidebar-button-block {
+    display: block;
+}
+
+/* CSS for NodeTab.jsx */
+.node-tab-container {
+    margin-left: 24px;
+    margin-top: 8px;
+    display: flex;
+    flex-direction: column;
+}
+
+.node-tab-text {
+    font-size: small;
+    margin-bottom: 2px;
+    margin-top: 2px;
+    margin-left: 10px;
+}
+
+.database-link {
+    font-size: small;
+    margin-bottom: 2px;
+    margin-top: 2px;
+    margin-left: 10px;
+    margin-right: 26px;
+    display: flex;
+    flex-direction: column;
+}
+
+.database-link a:hover {
+    text-decoration: underline;
+}
+
+.red-node-link {
+    font-weight: 500;
+    text-decoration: none;
+    background-color: var(--reed-red);
+    color: white;
+    padding: 5px;
+    border-radius: 10px;
+    border: 2px solid black;
+    text-align: center;
+    max-width: 160px;
+    margin-bottom: 5px;
+    margin-top: 5px;
+    margin-left: 10px;
+}
+
+.red-node-link:hover {
+    color: white;
+    background-color: var(--reed-red-hover);
+}
+
+.blue-node-link {
+    font-weight: 500;
+    text-decoration: none;
+    background-color: var(--graph-blue);
+    color: white;
+    padding: 5px;
+    border-radius: 10px;
+    border: 2px solid black;
+    text-align: center;
+    max-width: 160px;
+    margin-bottom: 5px;
+    margin-top: 5px;
+    margin-left: 10px;
+}
+
+.blue-node-link:hover {
+    color: white;
+    background-color: var(--graph-blue-hover);
+}
+
+.tan-node-link {
     font-weight: 500;
     text-decoration: none;
     background-color: var(--graph-tan);
@@ -604,22 +657,31 @@ select {
     border-radius: 10px;
     border: 2px solid black;
     text-align: center;
+    max-width: 160px;
+    margin-bottom: 5px;
+    margin-top: 5px;
+    margin-left: 10px;
 }
 
-.tan-sidebar-link:hover {
+.tan-node-link:hover {
     color: black;
     background-color: var(--graph-tan-hover);
 }
 
-.protein-summary {
-    margin-left: 16px;
-    display: flex;
-    flex-direction: column;
+.align-go-disclaimer {
+    display: inline-flex;
+    margin: 0;
+}
+
+.go-annotation-info {
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-left: 24px;
+    font-size: small;
 }
 
 .go-protein-disclaimer {
-    font-weight: bold;
-    font-size: x-small;
+    margin: 0;
 }
 
 /* CSS for QueryError.jsx */
@@ -714,7 +776,7 @@ select {
 .go-definition {
     background-color: var(--light-background);
     color: #000;
-    margin-top: 10px;
+    margin-top: 5px;
     margin-bottom: 5px;
     text-align: left;
     outline: 1px solid black;
