--- a/client/src/index.css
+++ b/client/src/index.css
@@ -201,15 +201,6 @@ body {
     margin-left: 12px;
 }
 
-.species-input-container {
-    margin-top: 1px;
-    margin-left: 10px;
-    margin-right: 10px;
-    height: 40px;
-    border-radius: 5px;
-    width: 180px;
-}
-
 .example {
     align-items: center;
     margin-left: 16px;
@@ -458,18 +449,21 @@ input {
     align-self: auto;
 }
 
-select {
+.search-select {
     border: none;
     position: relative;
     min-width: 20px;
     min-height: 25px;
     padding: 8px;
-    margin: 0;
     border-radius: 5px;
-    height: 25px;
-    width: 140px;
     order: 0;
     align-self: auto;
+    margin-top: 1px;
+    margin-left: 10px;
+    margin-right: 10px;
+    height: 40px;
+    border-radius: 5px;
+    width: 180px;
 }
 
 /* CSS for ExportGraph.jsx */
@@ -1102,6 +1096,61 @@ select {
 .about-list > li > a:hover {
     color: var(--text-hover);
 }
+
+/* CSS for DownloadPage.jsx */
+.download-body {
+    background-color: var(--graph-tan-hover);
+    width: 1000px;
+    margin: auto;
+    margin-top: 50px;
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-bottom: 25px;
+    padding-top: 5px;
+    border-radius: 10px;
+    color: rgb(0, 0, 0);
+    /* box-shadow: 0px -0px 10px 5px var(--shadow); */
+}
+
+/* .about-title {
+    padding-bottom: 5px;
+    border-bottom: 3px solid white;
+    text-align: center;
+}
+
+.about-body > p,
+.about-body > h3,
+.about-body-text {
+    color: white;
+    text-align: justify;
+}
+
+.about-body-text-heading {
+    text-align: left;
+    color: white;
+}
+
+.about-body > ul {
+    list-style-type: disc;
+}
+
+.about-body > p > a,
+.about-list > li > a,
+.about-body-link {
+    color: white;
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.about-body > p > a:hover,
+.about-body > p > ul > li > a:hover,
+.about-body-link:hover {
+    color: var(--text-hover);
+}
+
+.about-list > li > a:hover {
+    color: var(--text-hover);
+} */
 
 /* CSS for TOSPage.jsx */
 .tos-body {
@@ -1976,4 +2025,15 @@ select {
 
 .checkbox-container {
     padding-left: 5px;
+}
+
+.download-table-row{
+    display: flex;
+    flex-direction: row;
+    border: 2px solid black;
+}
+
+.download-table-column{
+    width: 50%;
+    border-right: 2px solid black;
 }
