Minor UI updates
Set both PPI and Reg to true on loading, fix CSS, add "Loading" to motifs tab

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2044,6 +2044,10 @@ input {
     align-items: center;
 }
 
+.search-checkbox-text {
+    padding-left: 5px;
+}
+
 .graph-stats-icon-container:hover {
     transform: scale(1.1);
 }
